# Dalton

./: .codecov.yml  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CHANGELOG.rst  CMakeLists.txt  COPYING  CTestConfig.cmake  CTestCustom.cmake.in  ChangeLog  Dockerfile  Dockerfile-dev  INSTALL.rst  Makefile  Makefile.in  README.build_with_cmake  README.cmake_for_developers  README.md  TESTING.rst  VERSION  buildsetupcommands  configure  crilib.cld  dalton  dalton.gnr  dalton.in  dalton.py  equivalences  export  setup  wrapper.py
DALTON/: .gitignore  CMakeLists.txt  ccdiis_solv.F  dalton.in  dalton_config.in  setup
DALTON/1e_cpp/: CMakeLists.txt  ababps.cpp  ababps.hpp  cache.hpp  cache32.hpp  cache64.hpp  consts.hpp  vpotdamp.cpp
DALTON/Doc/: Abacus.tex  Appendix.tex  Choles.tex  General.tex  Hermit.tex  Install.tex  Intro.tex  Lucita.tex  Maintain.tex  Master.bbl  Master.tex  Molecule.tex  New.tex  New12.tex  Preface.tex  Response.tex  Sirius.tex  Solvent.tex  Starting.tex  Symm_tut.bib  Symm_tut.tex  cccr.tex  ccexamples.tex  ccexci.tex  ccexgr.tex  ccexlr.tex  ccfop.tex  ccgeneral.tex  ccintro.tex  cclr.tex  cclrlanczos.tex  cclrsd.tex  ccmcd.tex  ccqr.tex  ccqr2r.tex  ccr12.tex  ccsm.tex  cctm.tex  choact.tex  cholexamples.tex  (+27 more)
DALTON/Doc_cc/: CoupledCluster.tex  ccgeneral.tex  cclr.tex  ccqr.tex  ccsm.tex  cctm.tex
DALTON/abacus/: aba2eth.F  aba2r12.F  aba2tex.F  abaaat.F  abactocd.F  abadip.F  abadrv.F  abadtra.F  abaedrv.F  abaenr.F  abaesym.F  abaexc.F  abaflt.F  abafmm.F  (+90 more)
LSDALTON/: .gitignore  .gitmodules  CMakeLists.txt  CTestConfig.cmake  Makefile  README  README_AddDirectory  TODO_MERGE  configure  lsdalton.in  lsdalton.scalasca.filter  lsdalton2011_gfortran_470_patch.diff  scalasca.in  setup
abacus/: CMakeLists.txt  Makefile  Makefile.depend  README.GEN1INT  aba2eth.F  aba2r12.F  aba2tex.F  abaaat.F  abactocd.F  abadip.F  abadrv.F  abadtra.F  abaedrv.F  abaenr.F  abaesym.F  abaexc.F  abaflt.F  abafmm.F  abafsd.F  abalnr.F  abaloc.F  abalresc.F  abalrs.F  abaltra.F  abamag.F  abamolden.F  abander.F  abandsym.F  abanuc.F  abanvib.F  abaop2.F  abaopg.F  abaopt.F  abaort.F  abapcm.F  abaptr.F  abaqm3.F  abaqmmm.F  abaqpg.F  abaqr.F  (+71 more)
cc/: CMakeLists.txt  Makefile  Makefile.depend  asqr.F  cc2_refop.F  cc3_aabmat_doub.F  cc3_aamat.F  cc3_abmatt3zu.F  cc3_aden.F  cc3_aden_cub.F  cc3_aden_cub_t0.F  cc3_bfmat.F  cc3_bmatsd.F  cc3_etasd.F  cc3_fbmatt3zu.F  cc3_fmat.F  cc3_fmatsd.F  cc3_ft3b.F  cc3_gmat.F  cc3_gmatnew.F  cc3_hmat.F  cc3_init.F  cc3_lhtr.F  cc3_omeg.F  cc3_omeg3.F  cc3_t3int.F  cc3_t3int3.F  cc3_trip.F  cc3_xi.F  cc3_xi_cont.F  cc3_xisd.F  cc_1idx_d2eff.F  cc_1idxtran.F  cc_21i2.F  cc_21i20.F  cc_21i3.F  cc_2eexp_1.F  cc_2eexp_2.F  cc_2hyp.F  cc_3hyp.F  (+218 more)
choles/: CMakeLists.txt  Makefile  cc_caa.F  cc_choatr.F  cc_chocc2.F  cc_chodbg.F  cc_chofop.F  cc_choftr.F  cc_chogd.F  cc_choio.F  cc_cholesky.F  cc_cholrim.F  cc_chomp2.F  cc_chonew.F  cc_chopden.F  cc_chopt.F  cc_chopt_dbg.F  cc_cia.F  cc_ciadbg.F  cc_cyi.F  cc_cyidbg.F  cc_decmo.F  cc_rdrspd.F  cc_rmrsp.F  cc_wrrspd.F  cho_dec.F  cho_tramo.F  nocc_util.F
gen1int/: CMakeLists.txt  DESIGN  INSTALL  MANUAL  Makefile  README  TODO  dalton_shell.F90  dirac_gen1int_interface.F90  err_thrsh.h  gen1int_api.F90  gen1int_cube.F90  gen1int_dal_clean.F90  gen1int_dal_init.F90  gen1int_dal_main.F90  gen1int_dal_prop.F90  gen1int_dal_test.F90  gen1int_host.F90  gen1int_host.h  gen1int_ifc_clean.F90  gen1int_ifc_init.F90  gen1int_ifc_main.F90  gen1int_ifc_prop.F90  gen1int_ifc_test.F90  gen1int_interface.F90  gen1int_matrix.F90  gen1int_num_opt.F90  gen1int_prop_attr.F90  gen1int_shell.F90  get_ao_dens.F90  max_len_str.h  reorder_p_sgto.F90
gp/: CMakeLists.txt  Makefile  Makefile.depend  README.gp  binary_info.F90  character_processing.F90  compilation_info.F90  compinfo.h.in  dalton_input_processing.F90  gpdahle.F  gphjj.F  gpjeppe.F  gpjkp.F  gpjt.F  gplucia.F  gplucia_io.F  gplupar.F  gpsaue.F  gpsimen.F  gptrygve.F  graphic.F  input_reader.F90  intel-ifc.c  intf7790.F  keyword.F90  memcb1.h  memory_parallel.F90  mempkg.F  mpi_dummy.F  mpimacro.F  mxmpack.F  one_sided_communication_wrappers.F90  pvmmacro.F  qpack.F  vcraypack.F
lucita/: CMakeLists.txt  Makefile  README.lucita  SysCtl.inc  SysDef.inc  cands.inc  cc_exc.inc  cecore.inc  cgas.inc  cicisp.inc  ciinfo.F  clunit.inc  comjep.inc  communicator_type_module.F90  cprnt.inc  crun.inc  csfbas.inc  csm.inc  cstate.inc  dalton_interface.F  dalton_mpi.F90  date.inc  density.F  diagonal.F  diagonalize.F  file_type_module.F90  files.inc  fio.inc  fnc.inc  fock.F  gasci_input_cfg.F90  gasstr.inc  glbbas.inc  gplucia.F  gplupar.F  gshelp.inc  intform.inc  io.F  irat.inc  luci.inc  (+54 more)
rsp/: CMakeLists.txt  Makefile  Makefile.depend  abscomplex.F  absorp.F  complexpp.F  deq27.F  expone.F  fone.F  gpcpp.F  hsoal2.F  hsoprp.F  hypinp.F  infave.h  lagrang.F  mcdrsp.F  qfock.F  qrhso.F  rspave.F  rspc8.F  rspc82.F  rspchannel.F  rspcr1.F  rspcr2.F  rspcr3.F  rspcr4.F  rspcr5.F  rspcr6.F  rspcr7.F  rspcr8.F  rspcr9.F  rspdm.F  rspe2c.F  rspesg.F  rspesg_gp.F  rspesg_lag.F  rspfxd.F  rspg.F  rsphfc.F  rsphso.F  (+28 more)
sirius/: CMakeLists.txt  Makefile  Makefile.depend  ciauth.F  ciham.F  cioff.F  cisig.F  csfstuff.F  dalcip.F  dens.F  detfi.F  detpr.F  dets0.F  dets1.F  drcctl.F  dypc.F  getcix.F  getint.F  infpop.h  intsort.F  inttra.h  koopro4.F  nevpt2.h  newtrahso.F  opt-solvers.F  r12aux.F  sir_mep.F  siraba.F  sirave.F  sirbkd.F  sircan.F  sircav.F  sirci.F  sircino.F  sircmo.F  sirctl.F  sirdiis.F  sirfck.F  sirgp.F  sirgrad.F  (+30 more)
soppa/: CMakeLists.txt  Makefile  ccsd_tcmepkx.F  dc_calc.F  dc_eres.F  dc_r1vec.F  dc_res_o.F  dc_rsplex.F  dc_sres.F  rp_anal.F  rp_charge.F  rp_check.F  rp_diag.F  rp_eres.F  rp_getgp.F  rp_incred.F  rp_init.F  rp_lrsolv.F  rp_newtrial.F  rp_optvec.F  rp_orth_trn.F  rp_redev.F  rp_res_o.F  rp_residual.F  rp_rsplex.F  rp_trial1.F  rp_trial2.F  rp_trmom.F  so_anal.F  so_aodens.F  so_bcktr.F  so_bextract.F  so_check.F  so_close.F  so_collect_tm.F  so_densai2.F  so_diag.F  so_ediag1.F  so_ediag2.F  so_eres.F  (+63 more)
trunk/: CMakeLists.txt
(+15432 files in other folders)
